feat: рабочая версия API на 20:00 - исправлены пути для авторизации, добавлена пагинация и фильтрация
