# app/services/authorize_api_request.rb
@@ -12,18 +12,42 @@ class AuthorizeApiRequest
   private
   
   def user
-    @user ||= User.find(decoded_token[:user_id]) if decoded_token
-  rescue ActiveRecord::RecordNotFound
-    nil
+    begin
+      @user ||= User.find(decoded_token[:user_id]) if decoded_token
+    rescue ActiveRecord::RecordNotFound
+      nil
+    rescue Auth::TokenExpiredError
+      Rails.logger.error("Access token has expired")
+      nil
+    rescue Auth::TokenInvalidError => e
+      Rails.logger.error("Invalid access token: #{e.message}")
+      nil
+    end
   end
   
   def decoded_token
-    @decoded_token ||= Auth::JsonWebToken.decode(http_auth_header)
+    @decoded_token ||= begin
+      token = http_auth_header
+      return nil unless token
+      
+      decoded = Auth::JsonWebToken.decode(token)
+      
+      # Проверяем, что это access token
+      if decoded && decoded[:token_type] != 'access'
+        Rails.logger.error("Invalid token type: #{decoded[:token_type]}")
+        raise Auth::TokenInvalidError, 'Invalid token type'
+      end
+      
+      decoded
+    end
   end
   
   def http_auth_header
+    Rails.logger.info("Authorization header: #{headers['Authorization']}")
     if headers['Authorization'].present?
-      return headers['Authorization'].split(' ').last
+      token = headers['Authorization'].split(' ').last
+      Rails.logger.info("Extracted token: #{token}")
+      return token
     end
     nil
   end
